WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114003
[BlackBerry] WebOverlay: fix access to m_client
https://bugs.webkit.org/show_bug.cgi?id=114003
Summary
[BlackBerry] WebOverlay: fix access to m_client
Alberto Garcia
Reported
2013-04-05 00:08:41 PDT
In WebOverlay.cpp there's a reference to m_client, which was removed in
r146058
:
http://trac.webkit.org/changeset/146058/trunk/Source/WebKit/blackberry/Api/WebOverlay_p.h
Attachments
Patch
(1.46 KB, patch)
2013-04-05 00:10 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-04-05 00:10:39 PDT
Created
attachment 196586
[details]
Patch
Rob Buis
Comment 2
2013-04-05 04:26:30 PDT
Comment on
attachment 196586
[details]
Patch Ok.
WebKit Commit Bot
Comment 3
2013-04-05 05:24:51 PDT
Comment on
attachment 196586
[details]
Patch Clearing flags on attachment: 196586 Committed
r147738
: <
http://trac.webkit.org/changeset/147738
>
WebKit Commit Bot
Comment 4
2013-04-05 05:24:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug