[BlackBerry] WebOverlay: fix access to m_client https://bugs.webkit.org/show_bug.cgi?id=114003

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-04-05
Reviewed by Rob Buis.

m_client was replace by m_overlay in r146058.

* Api/WebOverlay.cpp:
(BlackBerry::WebKit::WebOverlayLayerCompositingThreadClient::uploadTexturesIfNeeded):

Canonical link: https://commits.webkit.org/132381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147738 268f45cc-cd09-0410-ab3c-d52691b4dbfc